--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "daisyui";
 
 @font-face {
     font-family: 'MabinogiClassic';
